--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+      
+
 </head>
 <body>
     <p>Chat App</p>
+    <ol id = "allMessages"></ol>
+    <form id = "message-form">
+        <input name = "message" type = "text"/>
+        <button> Send</button>
+    </form>
+    <button id = "send-location">Send</button>
+    
+
+    <script src ="libs/jquery.min.js"></script> 
     <script src="/socket.io/socket.io.js"></script>
-    <script src ="/js/index.js"></script>    
+    <script src ="/js/index.js"></script>   
 </body>
 </html>
